--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -801,17 +801,17 @@
 鏷	bục	
 卜	buc	
 卟	buc	
-坌	bụn	
-夯	bụn	
-笨	bụn	
+坌	bộn	
+夯	bộn	
+笨	bộn	
 崩	búng	
 蒙	búng	
 捧	bủng	
 泵	bủng	
 甭	bủng	
-不	but	
-吥	but	
-鈈	but	
+不	bôt	
+吥	bôt	
+鈈	bôt	
 叉	trã	
 岔	trã	
 扠	trã	
@@ -1239,34 +1239,34 @@
 蓄	truc	
 觸	truc	
 豖	truc	
-串	trũn	
-膥	trũn	
-傳	trùn	
-串	trún	
-巛	trún	
-川	trún	
-攢	trún	
-旾	trún	
-春	trún	
-椿	trún	
-氚	trún	
-汌	trún	
-穿	trún	
-蝽	trún	
-釧	trún	
-鰆	trún	
-喘	trủn	
-忖	trủn	
-揣	trủn	
-湍	trủn	
-猯	trủn	
-篅	trủn	
-舛	trủn	
-蠢	trủn	
-貒	trủn	
-踳	trủn	
-遄	trủn	
-䦟	trủn	
+串	trỗn	
+膥	trỗn	
+傳	trồn	
+串	trốn	
+巛	trốn	
+川	trốn	
+攢	trốn	
+旾	trốn	
+春	trốn	
+椿	trốn	
+氚	trốn	
+汌	trốn	
+穿	trốn	
+蝽	trốn	
+釧	trốn	
+鰆	trốn	
+喘	trổn	
+忖	trổn	
+揣	trổn	
+湍	trổn	
+猯	trổn	
+篅	trổn	
+舛	trổn	
+蠢	trổn	
+貒	trổn	
+踳	trổn	
+遄	trổn	
+䦟	trổn	
 涌	trũng	
 蟲	trũng	
 种	trùng	
@@ -1300,9 +1300,9 @@
 䘪	trúng	
 𡺪	trúng	
 𥅻	trúng	
-出	trut	
-黢	trut	
-齣	trut	
+出	trôt	
+黢	trôt	
+齣	trôt	
 咑	tà	
 打	tả	
 䍤	tãi	
@@ -1786,34 +1786,34 @@
 足	túc	
 浞	tuc	
 足	tuc	
-樽	tũn	
-罇	tũn	
-扽	tụn	
-俊	tún	
-尊	tún	
-峻	tún	
-悛	tún	
-搢	tún	
-撙	tún	
-晉	tún	
-朘	tún	
-浚	tún	
-濬	tún	
-焌	tún	
-皴	tún	
-稕	tún	
-竣	tún	
-縉	tún	
-縉	tún	
-脧	tún	
-蹲	tún	
-逡	tún	
-遵	tún	
-鐫	tún	
-雋	tún	
-餕	tún	
-駿	tún	
-鱒	tún	
+樽	tỗn	
+罇	tỗn	
+扽	tộn	
+俊	tốn	
+尊	tốn	
+峻	tốn	
+悛	tốn	
+搢	tốn	
+撙	tốn	
+晉	tốn	
+朘	tốn	
+浚	tốn	
+濬	tốn	
+焌	tốn	
+皴	tốn	
+稕	tốn	
+竣	tốn	
+縉	tốn	
+縉	tốn	
+脧	tốn	
+蹲	tốn	
+逡	tốn	
+遵	tốn	
+鐫	tốn	
+雋	tốn	
+餕	tốn	
+駿	tốn	
+鱒	tốn	
 粽	tũng	
 糉	tũng	
 糭	tũng	
@@ -1866,10 +1866,10 @@
 𦁕	tủng	
 𨍈	tủng	
 𨍉	tủng	
-絕	tụt	
-卒	tut	
-嘟	tut	
-捽	tut	
+絕	tột	
+卒	tôt	
+嘟	tôt	
+捽	tôt	
 欸	ệ	
 誒	ệ	
 欸	ế	
@@ -2478,61 +2478,61 @@
 輻	phuc	
 馥	phuc	
 鰒	phuc	
-僨	phũn	
-奮	phũn	
-忿	phũn	
-憤	phũn	
-瀵	phũn	
-糞	phũn	
-鱝	phũn	
-垣	phùn	
-墳	phùn	
-桓	phùn	
-汾	phùn	
-洹	phùn	
-濆	phùn	
-焚	phùn	
-萑	phùn	
-蚠	phùn	
-蚡	phùn	
-豶	phùn	
-賁	phùn	
-鼢	phùn	
-份	phụn	
-分	phụn	
-坌	phụn	
-分	phún	
-勛	phún	
-勳	phún	
-吩	phún	
-塤	phún	
-壎	phún	
-婚	phún	
-惛	phún	
-昏	phún	
-曛	phún	
-棼	phún	
-氛	phún	
-涽	phún	
-湣	phún	
-煇	phún	
-熏	phún	
-燻	phún	
-獯	phún	
-玢	phún	
-瞓	phún	
-窨	phún	
-糞	phún	
-紛	phún	
-芬	phún	
-葷	phún	
-薰	phún	
-訓	phún	
-酚	phún	
-醺	phún	
-閽	phún	
-䎜	phún	
-粉	phủn	
+僨	phỗn	
+奮	phỗn	
+忿	phỗn	
+憤	phỗn	
+瀵	phỗn	
+糞	phỗn	
+鱝	phỗn	
+垣	phồn	
+墳	phồn	
+桓	phồn	
+汾	phồn	
+洹	phồn	
+濆	phồn	
+焚	phồn	
+萑	phồn	
+蚠	phồn	
+蚡	phồn	
+豶	phồn	
+賁	phồn	
+鼢	phồn	
+份	phộn	
+分	phộn	
+坌	phộn	
+分	phốn	
+勛	phốn	
+勳	phốn	
+吩	phốn	
+塤	phốn	
+壎	phốn	
+婚	phốn	
+惛	phốn	
+昏	phốn	
+曛	phốn	
+棼	phốn	
+氛	phốn	
+涽	phốn	
+湣	phốn	
+煇	phốn	
+熏	phốn	
+燻	phốn	
+獯	phốn	
+玢	phốn	
+瞓	phốn	
+窨	phốn	
+糞	phốn	
+紛	phốn	
+芬	phốn	
+葷	phốn	
+薰	phốn	
+訓	phốn	
+酚	phốn	
+醺	phốn	
+閽	phốn	
+䎜	phốn	
+粉	phổn	
 摓	phùng	
 渢	phùng	
 漨	phùng	
@@ -2581,38 +2581,38 @@
 賵	phủng	
 䩬	phủng	
 忽	phũt	
-佛	phụt	
-怫	phụt	
-㧾	phút	
-佛	phut	
-唿	phut	
-囫	phut	
-堀	phut	
-弗	phut	
-忽	phut	
-怫	phut	
-惚	phut	
-拂	phut	
-氟	phut	
-淴	phut	
-矻	phut	
-砩	phut	
-祓	phut	
-窟	phut	
-笏	phut	
-笰	phut	
-紱	phut	
-紼	phut	
-芾	phut	
-茀	phut	
-鍃	phut	
-韍	phut	
-鮄	phut	
-黻	phut	
-㧾	phut	
-䀟	phut	
-𥄱	phut	
-𦁕	phut	
+佛	phột	
+怫	phột	
+㧾	phốt	
+佛	phôt	
+唿	phôt	
+囫	phôt	
+堀	phôt	
+弗	phôt	
+忽	phôt	
+怫	phôt	
+惚	phôt	
+拂	phôt	
+氟	phôt	
+淴	phôt	
+矻	phôt	
+砩	phôt	
+祓	phôt	
+窟	phôt	
+笏	phôt	
+笰	phôt	
+紱	phôt	
+紼	phôt	
+芾	phôt	
+茀	phôt	
+鍃	phôt	
+韍	phôt	
+鮄	phôt	
+黻	phôt	
+㧾	phôt	
+䀟	phôt	
+𥄱	phôt	
+𦁕	phôt	
 嘎	kã/cã	
 家	kã/cã	
 尕	kã/cã	
@@ -3596,51 +3596,51 @@
 鞫	kuc/cuc	
 頊	kuc/cuc	
 鵠	kuc/cuc	
-丨	kũn/cũn	
-棍	kũn/cũn	
-竿	kũn/cũn	
-輥	kũn/cũn	
-倦	kụn/cụn	
-捃	kụn/cụn	
-珺	kụn/cụn	
-郡	kụn/cụn	
-君	kún/cún	
-均	kún/cún	
-娟	kún/cún	
-捐	kún/cún	
-昀	kún/cún	
-昆	kún/cún	
-涓	kún/cún	
-狷	kún/cún	
-畇	kún/cún	
-皸	kún/cún	
-眷	kún/cún	
-睠	kún/cún	
-筠	kún/cún	
-絹	kún/cún	
-罥	kún/cún	
-羂	kún/cún	
-蜎	kún/cún	
-蜵	kún/cún	
-蠲	kún/cún	
-裩	kún/cún	
-褌	kún/cún	
-身	kún/cún	
-軍	kún/cún	
-鄄	kún/cún	
-鈞	kún/cún	
-鋆	kún/cún	
-鵑	kún/cún	
-龜	kún/cún	
-悃	kủn/củn	
-滾	kủn/củn	
-磙	kủn/củn	
-袞	kủn/củn	
-裷	kủn/củn	
-錈	kủn/củn	
-鬈	kủn/củn	
-鮌	kủn/củn	
-鯀	kủn/củn	
+丨	kỗn/cỗn	
+棍	kỗn/cỗn	
+竿	kỗn/cỗn	
+輥	kỗn/cỗn	
+倦	kộn/cộn	
+捃	kộn/cộn	
+珺	kộn/cộn	
+郡	kộn/cộn	
+君	kốn/cốn	
+均	kốn/cốn	
+娟	kốn/cốn	
+捐	kốn/cốn	
+昀	kốn/cốn	
+昆	kốn/cốn	
+涓	kốn/cốn	
+狷	kốn/cốn	
+畇	kốn/cốn	
+皸	kốn/cốn	
+眷	kốn/cốn	
+睠	kốn/cốn	
+筠	kốn/cốn	
+絹	kốn/cốn	
+罥	kốn/cốn	
+羂	kốn/cốn	
+蜎	kốn/cốn	
+蜵	kốn/cốn	
+蠲	kốn/cốn	
+裩	kốn/cốn	
+褌	kốn/cốn	
+身	kốn/cốn	
+軍	kốn/cốn	
+鄄	kốn/cốn	
+鈞	kốn/cốn	
+鋆	kốn/cốn	
+鵑	kốn/cốn	
+龜	kốn/cốn	
+悃	kổn/cổn	
+滾	kổn/cổn	
+磙	kổn/cổn	
+袞	kổn/cổn	
+裷	kổn/cổn	
+錈	kổn/cổn	
+鬈	kổn/cổn	
+鮌	kổn/cổn	
+鯀	kổn/cổn	
 公	kũng/cũng	
 共	kụng/cụng	
 供	kúng/cúng	
@@ -3680,19 +3680,19 @@
 䡗	kủng/củng	
 葛	kũt/cũt	
 訣	kũt/cũt	
-倔	kụt/cụt	
-崛	kụt/cụt	
-掘	kụt/cụt	
-䘿	kụt/cụt	
-榾	kut/cut	
-橘	kut/cut	
-汩	kut/cut	
-蓇	kut/cut	
-譎	kut/cut	
-餶	kut/cut	
-骨	kut/cut	
-鶻	kut/cut	
-鷸	kut/cut	
+倔	kột/cột	
+崛	kột/cột	
+掘	kột/cột	
+䘿	kột/cột	
+榾	kôt/côt	
+橘	kôt/côt	
+汩	kôt/côt	
+蓇	kôt/côt	
+譎	kôt/côt	
+餶	kôt/côt	
+骨	kôt/côt	
+鶻	kôt/côt	
+鷸	kôt/côt	
 下	hã	
 疨	hã	
 蝦	hã	
@@ -4787,35 +4787,35 @@
 鵠	hục	
 哭	húc	
 哭	huc	
-券	hũn	
-圈	hũn	
-屯	hũn	
-桊	hũn	
-盾	hũn	
-屯	hùn	
-篿	hùn	
-臀	hùn	
-臋	hùn	
-豚	hùn	
-券	hún	
-勸	hún	
-吞	hún	
-呑	hún	
-暾	hún	
-氽	hún	
-獻	hún	
-禤	hún	
-綣	hún	
-鈍	hún	
-飩	hún	
-圈	hủn	
-圏	hủn	
-桊	hủn	
-棬	hủn	
-犬	hủn	
-甽	hủn	
-畎	hủn	
-𧨸	hủn	
+券	hỗn	
+圈	hỗn	
+屯	hỗn	
+桊	hỗn	
+盾	hỗn	
+屯	hồn	
+篿	hồn	
+臀	hồn	
+臋	hồn	
+豚	hồn	
+券	hốn	
+勸	hốn	
+吞	hốn	
+呑	hốn	
+暾	hốn	
+氽	hốn	
+獻	hốn	
+禤	hốn	
+綣	hốn	
+鈍	hốn	
+飩	hốn	
+圈	hổn	
+圏	hổn	
+桊	hổn	
+棬	hổn	
+犬	hổn	
+甽	hổn	
+畎	hổn	
+𧨸	hổn	
 筒	hũng	
 筩	hũng	
 紅	hũng	
@@ -4932,10 +4932,10 @@
 䆹	hủng	
 𢖶	hủng	
 𦶐	hủng	
-血	hút	
-桖	hut	
-缺	hut	
-血	hut	
+血	hốt	
+桖	hôt	
+缺	hôt	
+血	hôt	
 疐	ỹ/ỡi	
 蒂	ỹ/ỡi	
 地	ỵ/ợi	
@@ -5600,15 +5600,15 @@
 築	chuc	
 粥	chuc	
 鬻	chuc	
-圳	chụn	
-汌	chụn	
-汌	chụn	
-津	chụn	
-准	chủn	
-埻	chủn	
-準	chủn	
-隼	chủn	
-鶽	chủn	
+圳	chộn	
+汌	chộn	
+汌	chộn	
+津	chộn	
+准	chổn	
+埻	chổn	
+準	chổn	
+隼	chổn	
+鶽	chổn	
 盅	chũng	
 仲	chụng	
 重	chụng	
@@ -5641,8 +5641,8 @@
 穜	chủng	
 腫	chủng	
 踵	chủng	
-捽	chút	
-𢫋	chút	
+捽	chốt	
+𢫋	chốt	
 曱	khà	
 蠄	khà	
 跨	khà	
@@ -6137,54 +6137,54 @@
 蛐	khuc	
 麯	khuc	
 麴	khuc	
-菌	khũn	
-輥	khũn	
-啳	khùn	
-帬	khùn	
-惓	khùn	
-拳	khùn	
-權	khùn	
-羣	khùn	
-群	khùn	
-蜷	khùn	
-裙	khùn	
-裠	khùn	
-跧	khùn	
-踡	khùn	
-顴	khùn	
-鬈	khùn	
-麇	khùn	
-麕	khùn	
-僒	khún	
-困	khún	
-囷	khún	
-坤	khún	
-崐	khún	
-崑	khún	
-昆	khún	
-晜	khún	
-琨	khún	
-睏	khún	
-窘	khún	
-醌	khún	
-錕	khún	
-髡	khún	
-鯤	khún	
-鵾	khún	
-䖵	khún	
-卷	khủn	
-壼	khủn	
-悃	khủn	
-捃	khủn	
-捆	khủn	
-捲	khủn	
-綣	khủn	
-緄	khủn	
-菌	khủn	
-閫	khủn	
-麇	khủn	
-麏	khủn	
-龹	khunduhẩu	
+菌	khỗn	
+輥	khỗn	
+啳	khồn	
+帬	khồn	
+惓	khồn	
+拳	khồn	
+權	khồn	
+羣	khồn	
+群	khồn	
+蜷	khồn	
+裙	khồn	
+裠	khồn	
+跧	khồn	
+踡	khồn	
+顴	khồn	
+鬈	khồn	
+麇	khồn	
+麕	khồn	
+僒	khốn	
+困	khốn	
+囷	khốn	
+坤	khốn	
+崐	khốn	
+崑	khốn	
+昆	khốn	
+晜	khốn	
+琨	khốn	
+睏	khốn	
+窘	khốn	
+醌	khốn	
+錕	khốn	
+髡	khốn	
+鯤	khốn	
+鵾	khốn	
+䖵	khốn	
+卷	khổn	
+壼	khổn	
+悃	khổn	
+捃	khổn	
+捆	khổn	
+捲	khổn	
+綣	khổn	
+緄	khổn	
+菌	khổn	
+閫	khổn	
+麇	khổn	
+麏	khổn	
+龹	khốn tụ hẩu	
 窮	khũng	
 穹	khùng	
 窮	khùng	
@@ -6202,39 +6202,39 @@
 焪	khúng	
 孔	khủng	
 悾	khủng	
-闋	khút	
-劂	khut	
-厥	khut	
-噘	khut	
-噱	khut	
-孓	khut	
-屈	khut	
-抉	khut	
-撅	khut	
-橛	khut	
-橜	khut	
-決	khut	
-炔	khut	
-獗	khut	
-玃	khut	
-玦	khut	
-缺	khut	
-蕨	khut	
-蠼	khut	
-觖	khut	
-訣	khut	
-詘	khut	
-蹶	khut	
-鐍	khut	
-鐝	khut	
-钁	khut	
-闕	khut	
-駃	khut	
-鴂	khut	
-鴃	khut	
-鵙	khut	
-鶪	khut	
-㵐	khut	
+闋	khốt	
+劂	khôt	
+厥	khôt	
+噘	khôt	
+噱	khôt	
+孓	khôt	
+屈	khôt	
+抉	khôt	
+撅	khôt	
+橛	khôt	
+橜	khôt	
+決	khôt	
+炔	khôt	
+獗	khôt	
+玃	khôt	
+玦	khôt	
+缺	khôt	
+蕨	khôt	
+蠼	khôt	
+觖	khôt	
+訣	khôt	
+詘	khôt	
+蹶	khôt	
+鐍	khôt	
+鐝	khôt	
+钁	khôt	
+闕	khôt	
+駃	khôt	
+鴂	khôt	
+鴃	khôt	
+鵙	khôt	
+鶪	khôt	
+㵐	khôt	
 罅	lã	
 腌	lã	
 𨻲	lã	
@@ -7038,37 +7038,37 @@
 碌	luc	
 磟	luc	
 麓	luc	
-輪	lũn	
-侖	lùn	
-倫	lùn	
-圇	lùn	
-孌	lùn	
-孿	lùn	
-崘	lùn	
-崙	lùn	
-巒	lùn	
-掄	lùn	
-欒	lùn	
-淪	lùn	
-灤	lùn	
-綸	lùn	
-羉	lùn	
-聯	lùn	
-菕	lùn	
-論	lùn	
-輪	lùn	
-鑾	lùn	
-鸞	lùn	
-吝	lụn	
-恡	lụn	
-紊	lụn	
-藺	lụn	
-論	lụn	
-蹸	lụn	
-躪	lụn	
-攣	lún	
-戀	lủn	
-臠	lủn	
+輪	lỗn	
+侖	lồn	
+倫	lồn	
+圇	lồn	
+孌	lồn	
+孿	lồn	
+崘	lồn	
+崙	lồn	
+巒	lồn	
+掄	lồn	
+欒	lồn	
+淪	lồn	
+灤	lồn	
+綸	lồn	
+羉	lồn	
+聯	lồn	
+菕	lồn	
+論	lồn	
+輪	lồn	
+鑾	lồn	
+鸞	lồn	
+吝	lộn	
+恡	lộn	
+紊	lộn	
+藺	lộn	
+論	lộn	
+蹸	lộn	
+躪	lộn	
+攣	lốn	
+戀	lổn	
+臠	lổn	
 壟	lũng	
 壠	lũng	
 槞	lũng	
@@ -7129,20 +7129,20 @@
 𢙱	lụng	
 攏	lủng	
 籠	lủng	
-傈	lụt	
-凓	lụt	
-律	lụt	
-慄	lụt	
-栗	lụt	
-溧	lụt	
-率	lụt	
-篥	lụt	
-聿	lụt	
-葎	lụt	
-遹	lụt	
-捋	lút	
-劣	lut	
-甪	lut	
+傈	lột	
+凓	lột	
+律	lột	
+慄	lột	
+栗	lột	
+溧	lột	
+率	lột	
+篥	lột	
+聿	lột	
+葎	lột	
+遹	lột	
+捋	lốt	
+劣	lôt	
+甪	lôt	
 仵	ñg	
 伍	ñg	
 午	ñg	
@@ -7688,31 +7688,31 @@
 鉬	mục	
 卜	múc	
 卜	muc	
-吻	mũn	
-愍	mũn	
-憫	mũn	
-旻	mũn	
-汶	mũn	
-湣	mũn	
-璺	mũn	
-蚊	mũn	
-閔	mũn	
-抆	mùn	
-文	mùn	
-汶	mùn	
-玟	mùn	
-紋	mùn	
-聞	mùn	
-閿	mùn	
-闅	mùn	
-雯	mùn	
-問	mụn	
-文	mụn	
-璺	mụn	
-紊	mụn	
-炆	mủn	
-緡	mủn	
-鰵	mủn	
+吻	mỗn	
+愍	mỗn	
+憫	mỗn	
+旻	mỗn	
+汶	mỗn	
+湣	mỗn	
+璺	mỗn	
+蚊	mỗn	
+閔	mỗn	
+抆	mồn	
+文	mồn	
+汶	mồn	
+玟	mồn	
+紋	mồn	
+聞	mồn	
+閿	mồn	
+闅	mồn	
+雯	mồn	
+問	mộn	
+文	mộn	
+璺	mộn	
+紊	mộn	
+炆	mổn	
+緡	mổn	
+鰵	mổn	
 冡	mùng	
 尨	mùng	
 幪	mùng	
@@ -7744,8 +7744,8 @@
 懵	mủng	
 檬	mủng	
 鼆	mủng	
-物	mụt	
-𠰌	mút	
+物	một	
+𠰌	mốt	
 衲	nã	
 哪	nà	
 娜	nà	
@@ -8371,27 +8371,27 @@
 𨰻	ngục	
 兀	ngúc	
 郁	ngúc	
-朊	ngũn	
-硯	ngũn	
-元	ngùn	
-原	ngùn	
-厵	ngùn	
-塬	ngùn	
-嫄	ngùn	
-沅	ngùn	
-源	ngùn	
-蚖	ngùn	
-螈	ngùn	
-覎	ngùn	
-言	ngùn	
-阮	ngùn	
-潤	ngụn	
-閏	ngụn	
-願	ngụn	
-耎	ngún	
-軟	ngún	
-輭	ngún	
-䓴	ngún	
+朊	ngỗn	
+硯	ngỗn	
+元	ngồn	
+原	ngồn	
+厵	ngồn	
+塬	ngồn	
+嫄	ngồn	
+沅	ngồn	
+源	ngồn	
+蚖	ngồn	
+螈	ngồn	
+覎	ngồn	
+言	ngồn	
+阮	ngồn	
+潤	ngộn	
+閏	ngộn	
+願	ngộn	
+耎	ngốn	
+軟	ngốn	
+輭	ngốn	
+䓴	ngốn	
 喁	ngùng	
 毧	ngùng	
 濃	ngùng	
@@ -8404,16 +8404,16 @@
 顒	ngùng	
 蛹	ngụng	
 月	ngũt	
-抈	ngụt	
-月	ngụt	
-焫	ngụt	
-玥	ngụt	
-兀	ngut	
-刖	ngut	
-卼	ngut	
-杌	ngut	
-矻	ngut	
-阢	ngut	
+抈	ngột	
+月	ngột	
+焫	ngột	
+玥	ngột	
+兀	ngôt	
+刖	ngôt	
+卼	ngôt	
+杌	ngôt	
+矻	ngôt	
+阢	ngôt	
 你	nỹ	
 您	nỹ	
 旎	nỹ	
@@ -8517,7 +8517,7 @@
 勖	nuc	
 勗	nuc	
 恧	nuc	
-嫩	nụn	
+嫩	nộn	
 燶	nũng	
 儂	nùng	
 噥	nùng	
@@ -8525,12 +8525,12 @@
 膿	nùng	
 農	nùng	
 燶	núng	
-慄	nụt	
-肭	nụt	
-訥	nụt	
-抐	nút	
-抐	nut	
-胖	nut	
+慄	nột	
+肭	nột	
+訥	nột	
+抐	nốt	
+抐	nôt	
+胖	nôt	
 哦	ọ	
 墮	ọ	
 惰	ọ	
@@ -9036,10 +9036,10 @@
 仆	pũc	
 仆	púc	
 仆	puc	
-湓	pũn	
-盆	pũn	
-噴	pún	
-濆	pún	
+湓	pỗn	
+盆	pỗn	
+噴	pốn	
+濆	pốn	
 塜	pùng	
 塳	pùng	
 漨	pùng	
@@ -9640,32 +9640,32 @@
 倏	suc	
 叔	suc	
 縮	suc	
-瞬	sũn	
-腎	sũn	
-蜃	sũn	
-蜄	sũn	
-鶉	sũn	
-唇	sùn	
-淳	sùn	
-純	sùn	
-脣	sùn	
-蒓	sùn	
-蓴	sùn	
-醇	sùn	
-錞	sùn	
-馴	sùn	
-順	sụn	
-舜	sún	
+瞬	sỗn	
+腎	sỗn	
+蜃	sỗn	
+蜄	sỗn	
+鶉	sỗn	
+唇	sồn	
+淳	sồn	
+純	sồn	
+脣	sồn	
+蒓	sồn	
+蓴	sồn	
+醇	sồn	
+錞	sồn	
+馴	sồn	
+順	sộn	
+舜	sốn	
 嫞	sùng	
 崇	sùng	
 崈	sùng	
 鱅	sùng	
 㓽	sùng	
-沭	sụt	
-秫	sụt	
-術	sụt	
-述	sụt	
-鉥	sụt	
+沭	sột	
+秫	sột	
+術	sột	
+述	sột	
+鉥	sột	
 亝	xài	
 懠	xài	
 薺	xài	
@@ -10041,49 +10041,49 @@
 遬	xuc	
 鵚	xuc	
 齪	xuc	
-圳	xũn	
-屯	xũn	
-屯	xũn	
-村	xũn	
-榛	xũn	
-津	xũn	
-溱	xũn	
-獉	xũn	
-窀	xũn	
-肫	xũn	
-臻	xũn	
-蓁	xũn	
-衠	xũn	
-諄	xũn	
-迍	xũn	
-邨	xũn	
-佺	xùn	
-全	xùn	
-嗪	xùn	
-囤	xùn	
-存	xùn	
-巡	xùn	
-廵	xùn	
-循	xùn	
-旬	xùn	
-栒	xùn	
-栓	xùn	
-泉	xùn	
-溱	xùn	
-痊	xùn	
-秦	xùn	
-筌	xùn	
-荃	xùn	
-螓	xùn	
-詮	xùn	
-蹲	xùn	
-輇	xùn	
-醛	xùn	
-鰁	xùn	
-吋	xún	
-寸	xún	
-村	xún	
-𧨸	xủn	
+圳	xỗn	
+屯	xỗn	
+屯	xỗn	
+村	xỗn	
+榛	xỗn	
+津	xỗn	
+溱	xỗn	
+獉	xỗn	
+窀	xỗn	
+肫	xỗn	
+臻	xỗn	
+蓁	xỗn	
+衠	xỗn	
+諄	xỗn	
+迍	xỗn	
+邨	xỗn	
+佺	xồn	
+全	xồn	
+嗪	xồn	
+囤	xồn	
+存	xồn	
+巡	xồn	
+廵	xồn	
+循	xồn	
+旬	xồn	
+栒	xồn	
+栓	xồn	
+泉	xồn	
+溱	xồn	
+痊	xồn	
+秦	xồn	
+筌	xồn	
+荃	xồn	
+螓	xồn	
+詮	xồn	
+蹲	xồn	
+輇	xồn	
+醛	xồn	
+鰁	xồn	
+吋	xốn	
+寸	xốn	
+村	xốn	
+𧨸	xổn	
 蔥	xũng	
 叢	xùng	
 従	xùng	
@@ -10120,7 +10120,7 @@
 驄	xúng	
 慫	xủng	
 𥓿	xuõ	
-擦	xút	
+擦	xốt	
 妒	ụ	
 妬	ụ	
 度	ụ	
@@ -10189,35 +10189,35 @@
 竺	uc	
 篤	uc	
 齷	uc	
-盹	ũn	
-頓	ũn	
-惇	ụn	
-扽	ụn	
-撴	ụn	
-敦	ụn	
-楯	ụn	
-沌	ụn	
-炖	ụn	
-燉	ụn	
-盾	ụn	
-砘	ụn	
-蹾	ụn	
-遁	ụn	
-鈍	ụn	
-頓	ụn	
-㪟	ụn	
-敦	ún	
-暾	ún	
-鐓	ún	
-驐	ún	
-噸	ủn	
-囤	ủn	
-墩	ủn	
-墪	ủn	
-屯	ủn	
-拴	ủn	
-礅	ủn	
-躉	ủn	
+盹	ỗn	
+頓	ỗn	
+惇	ộn	
+扽	ộn	
+撴	ộn	
+敦	ộn	
+楯	ộn	
+沌	ộn	
+炖	ộn	
+燉	ộn	
+盾	ộn	
+砘	ộn	
+蹾	ộn	
+遁	ộn	
+鈍	ộn	
+頓	ộn	
+㪟	ộn	
+敦	ốn	
+暾	ốn	
+鐓	ốn	
+驐	ốn	
+噸	ổn	
+囤	ổn	
+墩	ổn	
+墪	ổn	
+屯	ổn	
+拴	ổn	
+礅	ổn	
+躉	ổn	
 瓮	ũng	
 甕	ũng	
 罋	ũng	
@@ -10265,13 +10265,13 @@
 㧬	ủng	
 𢫨	ủng	
 突	ũt	
-凸	ụt	
-奪	ụt	
-突	ụt	
-腯	ụt	
-葖	ụt	
-頓	ụt	
-飿	ụt	
+凸	ột	
+奪	ột	
+突	ột	
+腯	ột	
+葖	ột	
+頓	ột	
+飿	ột	
 舙	vã	
 嘩	và	
 樺	và	
@@ -10600,65 +10600,65 @@
 鎢	vú	
 靰	vú	
 鎢	vủ	
-允	vũn	
-尹	vũn	
-狁	vũn	
-云	vùn	
-勻	vùn	
-暈	vùn	
-煇	vùn	
-畇	vùn	
-紜	vùn	
-耘	vùn	
-芸	vùn	
-葷	vùn	
-蕓	vùn	
-贇	vùn	
-鄖	vùn	
-雲	vùn	
-餛	vùn	
-餫	vùn	
-魂	vùn	
-圂	vụn	
-惲	vụn	
-慁	vụn	
-殞	vụn	
-混	vụn	
-渾	vụn	
-溷	vụn	
-熨	vụn	
-琿	vụn	
-葷	vụn	
-諢	vụn	
-運	vụn	
-鄆	vụn	
-隕	vụn	
-韻	vụn	
-員	vún	
-慍	vún	
-榲	vún	
-氳	vún	
-溫	vún	
-瘟	vún	
-縕	vún	
-醞	vún	
-韞	vún	
-鰮	vún	
-搵	vủn	
-穩	vủn	
-蘊	vủn	
-醞	vủn	
-韞	vủn	
+允	vỗn	
+尹	vỗn	
+狁	vỗn	
+云	vồn	
+勻	vồn	
+暈	vồn	
+煇	vồn	
+畇	vồn	
+紜	vồn	
+耘	vồn	
+芸	vồn	
+葷	vồn	
+蕓	vồn	
+贇	vồn	
+鄖	vồn	
+雲	vồn	
+餛	vồn	
+餫	vồn	
+魂	vồn	
+圂	vộn	
+惲	vộn	
+慁	vộn	
+殞	vộn	
+混	vộn	
+渾	vộn	
+溷	vộn	
+熨	vộn	
+琿	vộn	
+葷	vộn	
+諢	vộn	
+運	vộn	
+鄆	vộn	
+隕	vộn	
+韻	vộn	
+員	vốn	
+慍	vốn	
+榲	vốn	
+氳	vốn	
+溫	vốn	
+瘟	vốn	
+縕	vốn	
+醞	vốn	
+韞	vốn	
+鰮	vốn	
+搵	vổn	
+穩	vổn	
+蘊	vổn	
+醞	vổn	
+韞	vổn	
 核	vũt	
-煀	vút	
-尉	vut	
-屈	vut	
-欝	vut	
-熨	vut	
-膃	vut	
-詘	vut	
-鬰	vut	
-鬱	vut	
+煀	vốt	
+尉	vôt	
+屈	vôt	
+欝	vôt	
+熨	vôt	
+膃	vôt	
+詘	vôt	
+鬰	vôt	
+鬱	vôt	
 壻	slãi	
 婿	slãi	
 細	slãi	
@@ -11133,61 +11133,61 @@
 餿	sluc	
 鷫	sluc	
 㝛	sluc	
-悛	slùn	
-旋	slùn	
-漩	slùn	
-璇	slùn	
-璿	slùn	
-鏇	slùn	
-拴	slụn	
-篆	slụn	
-羡	slụn	
-銓	slụn	
-儇	slún	
-吅	slún	
-咺	slún	
-喧	slún	
-噀	slún	
-孫	slún	
-宣	slún	
-峋	slún	
-巽	slún	
-徇	slún	
-恂	slún	
-揎	slún	
-昍	slún	
-晅	slún	
-暄	slún	
-楦	slún	
-殉	slún	
-洵	slún	
-浚	slún	
-渲	slún	
-烜	slún	
-煊	slún	
-狥	slún	
-猻	slún	
-珣	slún	
-瑄	slún	
-碹	slún	
-絢	slún	
-翾	slún	
-荀	slún	
-萱	slún	
-蓀	slún	
-詢	slún	
-諼	slún	
-迅	slún	
-遜	slún	
-郇	slún	
-飧	slún	
-飱	slún	
-損	slủn	
-榫	slủn	
-筍	slủn	
-篹	slủn	
-簨	slủn	
-選	slủn	
+悛	slồn	
+旋	slồn	
+漩	slồn	
+璇	slồn	
+璿	slồn	
+鏇	slồn	
+拴	slộn	
+篆	slộn	
+羡	slộn	
+銓	slộn	
+儇	slốn	
+吅	slốn	
+咺	slốn	
+喧	slốn	
+噀	slốn	
+孫	slốn	
+宣	slốn	
+峋	slốn	
+巽	slốn	
+徇	slốn	
+恂	slốn	
+揎	slốn	
+昍	slốn	
+晅	slốn	
+暄	slốn	
+楦	slốn	
+殉	slốn	
+洵	slốn	
+浚	slốn	
+渲	slốn	
+烜	slốn	
+煊	slốn	
+狥	slốn	
+猻	slốn	
+珣	slốn	
+瑄	slốn	
+碹	slốn	
+絢	slốn	
+翾	slốn	
+荀	slốn	
+萱	slốn	
+蓀	slốn	
+詢	slốn	
+諼	slốn	
+迅	slốn	
+遜	slốn	
+郇	slốn	
+飧	slốn	
+飱	slốn	
+損	slổn	
+榫	slổn	
+筍	slổn	
+篹	slổn	
+簨	slổn	
+選	slổn	
 餸	slũng	
 娀	slúng	
 宋	slúng	
@@ -11212,16 +11212,16 @@
 竦	slủng	
 聳	slủng	
 𪀚	slủng	
-恤	slut	
-戌	slut	
-摔	slut	
-率	slut	
-窣	slut	
-蟀	slut	
-賉	slut	
-雪	slut	
-鱈	slut	
-䘏	slut	
+恤	slôt	
+戌	slôt	
+摔	slôt	
+率	slôt	
+窣	slôt	
+蟀	slôt	
+賉	slôt	
+雪	slôt	
+鱈	slôt	
+䘏	slôt	
 也	yã	
 吔	yã	
 呀	yà	
@@ -11997,9 +11997,9 @@
 薁	yuc	
 郁	yuc	
 鋈	yuc	
-勻	yùn	
-昀	yùn	
-筠	yùn	
+勻	yồn	
+昀	yồn	
+筠	yồn	
 勇	yũng	
 勈	yũng	
 傛	yùng	
