--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -1,6 +1,6 @@
 #粵語國語字香港同廣州口音書寫建議體
 #version: 25/3/2025
-#author: cathaylab
+#auâthor: cathaylab
 吖	ơ
 啊	ớ
 㝞	a
@@ -1773,7 +1773,7 @@
 塳	bụng
 槰	bụng
 𩗴	bụng
-𠼭	but
+𠼭	bôt
 㞈	bót
 䍨	bót
 䢌	bót
@@ -2891,87 +2891,87 @@
 𡃴	xùi
 𢊍	xùi
 𥱥	xùi
-㫩	xun
-㻐	xun
-䞭	xun
-䞺	xun
-䡅	xun
-堾	xun
-夋	xun
-媋	xun
-旾	xun
-春	xun
-暙	xun
-杶	xun
-椿	xun
-橁	xun
-櫄	xun
-溱	xun
-瑃	xun
-皴	xun
-竣	xun
-竴	xun
-膥	xun
-芚	xun
-萅	xun
-蝽	xun
-踆	xun
-輴	xun
-逡	xun
-鰆	xun
-鶉	xun
-鶞	xun
-𢰦	xun
-𣇸	xun
-𪂹	xun
-㖺	xủn
-㿤	xủn
-䏛	xủn
-䐏	xủn
-䦮	xủn
-䮞	xủn
-偆	xủn
-惷	xủn
-睶	xủn
-箺	xủn
-萶	xủn
-蠢	xủn
-賰	xủn
-㫬	xùn
-㵌	xùn
-㶷	xùn
-䋸	xùn
-䖲	xùn
-䙉	xùn
-嗪	xùn
-嫀	xùn
-巡	xùn
-廵	xùn
-徇	xùn
-循	xùn
-旬	xùn
-杊	xùn
-栒	xùn
-溱	xùn
-灥	xùn
-秦	xùn
-紃	xùn
-蓁	xùn
-螓	xùn
-馴	xùn
-𡻈	xùn
-㔘	xut
-㤕	xut
-䟣	xut
-䢺	xut
-出	xut
-岀	xut
-怵	xut
-欪	xut
-焌	xut
-絀	xut
-黜	xut
-齣	xut
+㫩	xuân
+㻐	xuân
+䞭	xuân
+䞺	xuân
+䡅	xuân
+堾	xuân
+夋	xuân
+媋	xuân
+旾	xuân
+春	xuân
+暙	xuân
+杶	xuân
+椿	xuân
+橁	xuân
+櫄	xuân
+溱	xuân
+瑃	xuân
+皴	xuân
+竣	xuân
+竴	xuân
+膥	xuân
+芚	xuân
+萅	xuân
+蝽	xuân
+踆	xuân
+輴	xuân
+逡	xuân
+鰆	xuân
+鶉	xuân
+鶞	xuân
+𢰦	xuân
+𣇸	xuân
+𪂹	xuân
+㖺	xuẩn
+㿤	xuẩn
+䏛	xuẩn
+䐏	xuẩn
+䦮	xuẩn
+䮞	xuẩn
+偆	xuẩn
+惷	xuẩn
+睶	xuẩn
+箺	xuẩn
+萶	xuẩn
+蠢	xuẩn
+賰	xuẩn
+㫬	xuần
+㵌	xuần
+㶷	xuần
+䋸	xuần
+䖲	xuần
+䙉	xuần
+嗪	xuần
+嫀	xuần
+巡	xuần
+廵	xuần
+徇	xuần
+循	xuần
+旬	xuần
+杊	xuần
+栒	xuần
+溱	xuần
+灥	xuần
+秦	xuần
+紃	xuần
+蓁	xuần
+螓	xuần
+馴	xuần
+𡻈	xuần
+㔘	xuât
+㤕	xuât
+䟣	xuât
+䢺	xuât
+出	xuât
+岀	xuât
+怵	xuât
+欪	xuât
+焌	xuât
+絀	xuât
+黜	xuât
+齣	xuât
 㖢	xi
 㞖	xi
 㰞	xi
@@ -5344,57 +5344,57 @@
 陮	đụi
 隊	đụi
 頧	đụi
-㢯	đun
-㥫	đun
-㪟	đun
-㻻	đun
-䃦	đun
-䔻	đun
-䪃	đun
-吨	đun
-噸	đun
-墩	đun
-墪	đun
-墫	đun
-壿	đun
-惇	đun
-撉	đun
-撴	đun
-敦	đun
-橔	đun
-犜	đun
-獤	đun
-礅	đun
-蜳	đun
-諄	đun
-蹲	đun
-鐓	đun
-驐	đun
-䤜	đụn
-伅	đụn
-噸	đụn
-囤	đụn
-庉	đụn
-扥	đụn
-扽	đụn
-敦	đụn
-沌	đụn
-潡	đụn
-炖	đụn
-燉	đụn
-盹	đụn
-砘	đụn
-逇	đụn
-遁	đụn
-遯	đụn
-鈍	đụn
-頓	đụn
-鶨	đụn
-𥫱	đụn
-咄	đut
-柮	đut
-胐	đut
-飿	đut
+㢯	đuân
+㥫	đuân
+㪟	đuân
+㻻	đuân
+䃦	đuân
+䔻	đuân
+䪃	đuân
+吨	đuân
+噸	đuân
+墩	đuân
+墪	đuân
+墫	đuân
+壿	đuân
+惇	đuân
+撉	đuân
+撴	đuân
+敦	đuân
+橔	đuân
+犜	đuân
+獤	đuân
+礅	đuân
+蜳	đuân
+諄	đuân
+蹲	đuân
+鐓	đuân
+驐	đuân
+䤜	đuận
+伅	đuận
+噸	đuận
+囤	đuận
+庉	đuận
+扥	đuận
+扽	đuận
+敦	đuận
+沌	đuận
+潡	đuận
+炖	đuận
+燉	đuận
+盹	đuận
+砘	đuận
+逇	đuận
+遁	đuận
+遯	đuận
+鈍	đuận
+頓	đuận
+鶨	đuận
+𥫱	đuận
+咄	đuât
+柮	đuât
+胐	đuât
+飿	đuât
 掉	đẹo
 調	đẹo
 啲	đi
@@ -7804,7 +7804,7 @@
 𥑆	ka/ca
 𧊀	ka/ca
 𩶛	ka/ca
-嗧	ka/ca lùn
+嗧	ka/ca luần
 㗎	kả/cả
 䑝	kả/cả
 假	kả/cả
@@ -10079,9 +10079,9 @@
 㓋	kụng/cụng
 䳍	kụng/cụng
 共	kụng/cụng
-嗗	kủt/củt
-嗗	kũt/cũt
-嗗	kụt/cụt
+嗗	kổt/cổt
+嗗	kỗt/cỗt
+嗗	kột/cột
 㧓	qua
 䒷	qua
 䫚	qua
@@ -13952,15 +13952,15 @@
 𥈠	yụi
 𥌑	yụi
 𨧨	yụi
-膶	yủn
-㠈	yụn
-䏰	yụn
-䦞	yụn
-撋	yụn
-橍	yụn
-潤	yụn
-閏	yụn
-閠	yụn
+膶	yuẩn
+㠈	yuận
+䏰	yuận
+䦞	yuận
+撋	yuận
+橍	yuận
+潤	yuận
+閏	yuận
+閠	yuận
 㐆	y/yi
 㛄	y/yi
 㥋	y/yi
@@ -19182,160 +19182,160 @@
 類	lụi
 𧭜	lụi
 𩸭	lụi
-㖥	lun
-噒	lun
-卵	lủn
-㓆	lùn
-㔂	lùn
-㖮	lùn
-㷍	lùn
-㷠	lùn
-䈁	lùn
-䑳	lùn
-䚬	lùn
-䢯	lùn
-䮼	lùn
-侖	lùn
-倫	lùn
-厸	lùn
-圇	lùn
-埨	lùn
-壣	lùn
-婨	lùn
-崘	lùn
-崙	lùn
-嶙	lùn
-惀	lùn
-掄	lùn
-斴	lùn
-暽	lùn
-棆	lùn
-淪	lùn
-潾	lùn
-燐	lùn
-獜	lùn
-璘	lùn
-疄	lùn
-瞵	lùn
-碖	lùn
-磮	lùn
-磷	lùn
-粦	lùn
-粼	lùn
-綸	lùn
-繗	lùn
-翷	lùn
-腀	lùn
-膦	lùn
-菕	lùn
-蜦	lùn
-論	lùn
-踚	lùn
-輪	lùn
-轔	lùn
-遴	lùn
-鄰	lùn
-錀	lùn
-鏻	lùn
-陯	lùn
-隣	lùn
-駗	lùn
-驎	lùn
-鯩	lùn
-鱗	lùn
-麐	lùn
-麟	lùn
-𢜒	lùn
-𤦎	lùn
-𥻘	lùn
-𪊓	lùn
-𪊲	lùn
-𪊺	lùn
-僯	lũn
-卵	lũn
-撛	lũn
-稐	lũn
-耣	lũn
-㖁	lụn
-䉮	lụn
-䗲	lụn
-䚏	lụn
-䫰	lụn
-亃	lụn
-僯	lụn
-吝	lụn
-恡	lụn
-悋	lụn
-惀	lụn
-橉	lụn
-溣	lụn
-焛	lụn
-甐	lụn
-疄	lụn
-碖	lụn
-磷	lụn
-紊	lụn
-膦	lụn
-藺	lụn
-論	lụn
-蹸	lụn
-躙	lụn
-躪	lụn
-轔	lụn
-轥	lụn
-遴	lụn
-閵	lụn
-陯	lụn
-𥣡	lụn
-栗	lủt
-率	lủt
-㖀	lụt
-㗚	lụt
-㟳	lụt
-㠥	lụt
-㪐	lụt
-㮚	lụt
-䔁	lụt
-䔞	lụt
-䡃	lụt
-䬆	lụt
-侓	lụt
-傈	lụt
-凓	lụt
-噊	lụt
-垏	lụt
-塛	lụt
-壘	lụt
-峍	lụt
-嵂	lụt
-律	lụt
-慄	lụt
-搮	lụt
-栗	lụt
-溧	lụt
-燏	lụt
-獝	lụt
-率	lụt
-瑮	lụt
-瞲	lụt
-矞	lụt
-硉	lụt
-箻	lụt
-篥	lụt
-繂	lụt
-繘	lụt
-聿	lụt
-膟	lụt
-葎	lụt
-遹	lụt
-驈	lụt
-鱊	lụt
-鷅	lụt
-鷸	lụt
-麜	lụt
-𠷈	lụt
-𤝽	lụt
-𨀞	lụt
+㖥	luân
+噒	luân
+卵	luẩn
+㓆	luần
+㔂	luần
+㖮	luần
+㷍	luần
+㷠	luần
+䈁	luần
+䑳	luần
+䚬	luần
+䢯	luần
+䮼	luần
+侖	luần
+倫	luần
+厸	luần
+圇	luần
+埨	luần
+壣	luần
+婨	luần
+崘	luần
+崙	luần
+嶙	luần
+惀	luần
+掄	luần
+斴	luần
+暽	luần
+棆	luần
+淪	luần
+潾	luần
+燐	luần
+獜	luần
+璘	luần
+疄	luần
+瞵	luần
+碖	luần
+磮	luần
+磷	luần
+粦	luần
+粼	luần
+綸	luần
+繗	luần
+翷	luần
+腀	luần
+膦	luần
+菕	luần
+蜦	luần
+論	luần
+踚	luần
+輪	luần
+轔	luần
+遴	luần
+鄰	luần
+錀	luần
+鏻	luần
+陯	luần
+隣	luần
+駗	luần
+驎	luần
+鯩	luần
+鱗	luần
+麐	luần
+麟	luần
+𢜒	luần
+𤦎	luần
+𥻘	luần
+𪊓	luần
+𪊲	luần
+𪊺	luần
+僯	luẫn
+卵	luẫn
+撛	luẫn
+稐	luẫn
+耣	luẫn
+㖁	luận
+䉮	luận
+䗲	luận
+䚏	luận
+䫰	luận
+亃	luận
+僯	luận
+吝	luận
+恡	luận
+悋	luận
+惀	luận
+橉	luận
+溣	luận
+焛	luận
+甐	luận
+疄	luận
+碖	luận
+磷	luận
+紊	luận
+膦	luận
+藺	luận
+論	luận
+蹸	luận
+躙	luận
+躪	luận
+轔	luận
+轥	luận
+遴	luận
+閵	luận
+陯	luận
+𥣡	luận
+栗	luẩt
+率	luẩt
+㖀	luật
+㗚	luật
+㟳	luật
+㠥	luật
+㪐	luật
+㮚	luật
+䔁	luật
+䔞	luật
+䡃	luật
+䬆	luật
+侓	luật
+傈	luật
+凓	luật
+噊	luật
+垏	luật
+塛	luật
+壘	luật
+峍	luật
+嵂	luật
+律	luật
+慄	luật
+搮	luật
+栗	luật
+溧	luật
+燏	luật
+獝	luật
+率	luật
+瑮	luật
+瞲	luật
+矞	luật
+硉	luật
+箻	luật
+篥	luật
+繂	luật
+繘	luật
+聿	luật
+膟	luật
+葎	luật
+遹	luật
+驈	luật
+鱊	luật
+鷅	luật
+鷸	luật
+麜	luật
+𠷈	luật
+𤝽	luật
+𨀞	luật
 𠺫	leo
 哩	li
 唎	li
@@ -22273,12 +22273,12 @@
 鄸	mụng
 霥	mụng
 霿	mụng
-𠰌	mut
-䬴	mút
-抹	mút
-沫	mút
-瀎	mút
-秣	mút
+𠰌	môt
+䬴	mốt
+抹	mốt
+沫	mốt
+瀎	mốt
+秣	mốt
 㶬	mọt
 䏞	mọt
 䱅	mọt
@@ -22684,18 +22684,18 @@
 呐	nũi
 女	nũi
 錗	nũi
-㕯	nụt
-䖓	nụt
-䟜	nụt
-吶	nụt
-呐	nụt
-抐	nụt
-肭	nụt
-袦	nụt
-訥	nụt
-豽	nụt
-貀	nụt
-鷸	nụt
+㕯	nuật
+䖓	nuật
+䟜	nuật
+吶	nuật
+呐	nuật
+抐	nuật
+肭	nuật
+袦	nuật
+訥	nuật
+豽	nuật
+貀	nuật
+鷸	nuật
 嗯	n̉g
 㐚	ǹg
 㹳	ǹg
@@ -23854,7 +23854,7 @@
 啊	ó
 哦	ò
 哦	ọ
-𠰲	ut
+𠰲	uât
 㗒	oi
 哀	oi
 唉	oi
@@ -26186,219 +26186,219 @@
 𤭢	sụi
 𥶙	sụi
 𨪂	sụi
-㡄	sun
-㨚	sun
-㰬	sun
-䘩	sun
-䜦	sun
-伨	sun
-侚	sun
-偱	sun
-咰	sun
-峋	sun
-徇	sun
-恂	sun
-栒	sun
-槆	sun
-殉	sun
-毥	sun
-洵	sun
-狥	sun
-珣	sun
-皴	sun
-眴	sun
-絢	sun
-荀	sun
-詢	sun
-踆	sun
-逡	sun
-郇	sun
-駨	sun
-𢓭	sun
-𦴥	sun
-㒐	sủn
-㔼	sủn
-㖘	sủn
-㦏	sủn
-囟	sủn
-栒	sủn
-榫	sủn
-笋	sủn
-筍	sủn
-箰	sủn
-簨	sủn
-賰	sủn
-鎨	sủn
-隼	sủn
-𠱸	sủn
-㐰	sún
-㢲	sún
-㭄	sún
-䀢	sún
-䀵	sún
-䏤	sún
-䐣	sún
-䑞	sún
-䒖	sún
-䚱	sún
-䛜	sún
-䛨	sún
-䞊	sún
-䪿	sún
-䭀	sún
-䴄	sún
-伩	sún
-信	sún
-卂	sún
-噀	sún
-囟	sún
-埈	sún
-奞	sún
-孞	sún
-孫	sún
-巺	sún
-巽	sún
-愻	sún
-橓	sún
-殾	sún
-汛	sún
-浚	sún
-潠	sún
-濬	sún
-眴	sún
-瞚	sún
-瞤	sún
-瞬	sún
-稄	sún
-簨	sún
-舜	sún
-芯	sún
-蕈	sún
-蕣	sún
-訊	sún
-訙	sún
-訫	sún
-賐	sún
-軐	sún
-迅	sún
-遜	sún
-酳	sún
-阠	sún
-顖	sún
-顨	sún
-鬊	sún
-鵔	sún
-𡡞	sún
-𡥪	sún
-𢁅	sún
-𢁉	sún
-𣊬	sún
-𤣲	sún
-𤩥	sún
-𦴩	sún
-𩕧	sún
-㝄	sùn
-㝇	sùn
-㵮	sùn
-㸪	sùn
-䓐	sùn
-䔚	sùn
-䣨	sùn
-䣩	sùn
-䣬	sùn
-䥎	sùn
-䫃	sùn
-唇	sùn
-屯	sùn
-浱	sùn
-淳	sùn
-湢	sùn
-湻	sùn
-滣	sùn
-漘	sùn
-焞	sùn
-犉	sùn
-畃	sùn
-瞤	sùn
-紃	sùn
-純	sùn
-肫	sùn
-脣	sùn
-蒓	sùn
-蓴	sùn
-醇	sùn
-醕	sùn
-錞	sùn
-陙	sùn
-馴	sùn
-鯙	sùn
-鶉	sùn
-𥌎	sùn
-吮	sũn
-揗	sũn
-楯	sũn
-盾	sũn
-碷	sũn
-㥧	sụn
-侚	sụn
-徇	sụn
-揗	sụn
-殉	sụn
-瞤	sụn
-迿	sụn
-順	sụn
-㖅	sut
-㞊	sut
-㲞	sut
-㺷	sut
-䘏	sut
-䢦	sut
-䳳	sut
-僁	sut
-卛	sut
-卹	sut
-埣	sut
-帥	sut
-怵	sut
-恤	sut
-戌	sut
-摔	sut
-欰	sut
-率	sut
-珬	sut
-甩	sut
-碿	sut
-窣	sut
-蜶	sut
-蟀	sut
-裇	sut
-訹	sut
-賉	sut
-銊	sut
-𣘚	sut
-𨄮	sut
-㤜	sụt
-䘤	sụt
-䢞	sụt
-䢤	sụt
-咰	sụt
-怷	sụt
-朮	sụt
-术	sụt
-沭	sụt
-潏	sụt
-炢	sụt
-秫	sụt
-絉	sụt
-荗	sụt
-術	sụt
-袕	sụt
-述	sụt
-鉥	sụt
-錰	sụt
-鶐	sụt
-𤇍	sụt
-𦸇	sụt
+㡄	suân
+㨚	suân
+㰬	suân
+䘩	suân
+䜦	suân
+伨	suân
+侚	suân
+偱	suân
+咰	suân
+峋	suân
+徇	suân
+恂	suân
+栒	suân
+槆	suân
+殉	suân
+毥	suân
+洵	suân
+狥	suân
+珣	suân
+皴	suân
+眴	suân
+絢	suân
+荀	suân
+詢	suân
+踆	suân
+逡	suân
+郇	suân
+駨	suân
+𢓭	suân
+𦴥	suân
+㒐	suẩn
+㔼	suẩn
+㖘	suẩn
+㦏	suẩn
+囟	suẩn
+栒	suẩn
+榫	suẩn
+笋	suẩn
+筍	suẩn
+箰	suẩn
+簨	suẩn
+賰	suẩn
+鎨	suẩn
+隼	suẩn
+𠱸	suẩn
+㐰	suấn
+㢲	suấn
+㭄	suấn
+䀢	suấn
+䀵	suấn
+䏤	suấn
+䐣	suấn
+䑞	suấn
+䒖	suấn
+䚱	suấn
+䛜	suấn
+䛨	suấn
+䞊	suấn
+䪿	suấn
+䭀	suấn
+䴄	suấn
+伩	suấn
+信	suấn
+卂	suấn
+噀	suấn
+囟	suấn
+埈	suấn
+奞	suấn
+孞	suấn
+孫	suấn
+巺	suấn
+巽	suấn
+愻	suấn
+橓	suấn
+殾	suấn
+汛	suấn
+浚	suấn
+潠	suấn
+濬	suấn
+眴	suấn
+瞚	suấn
+瞤	suấn
+瞬	suấn
+稄	suấn
+簨	suấn
+舜	suấn
+芯	suấn
+蕈	suấn
+蕣	suấn
+訊	suấn
+訙	suấn
+訫	suấn
+賐	suấn
+軐	suấn
+迅	suấn
+遜	suấn
+酳	suấn
+阠	suấn
+顖	suấn
+顨	suấn
+鬊	suấn
+鵔	suấn
+𡡞	suấn
+𡥪	suấn
+𢁅	suấn
+𢁉	suấn
+𣊬	suấn
+𤣲	suấn
+𤩥	suấn
+𦴩	suấn
+𩕧	suấn
+㝄	suần
+㝇	suần
+㵮	suần
+㸪	suần
+䓐	suần
+䔚	suần
+䣨	suần
+䣩	suần
+䣬	suần
+䥎	suần
+䫃	suần
+唇	suần
+屯	suần
+浱	suần
+淳	suần
+湢	suần
+湻	suần
+滣	suần
+漘	suần
+焞	suần
+犉	suần
+畃	suần
+瞤	suần
+紃	suần
+純	suần
+肫	suần
+脣	suần
+蒓	suần
+蓴	suần
+醇	suần
+醕	suần
+錞	suần
+陙	suần
+馴	suần
+鯙	suần
+鶉	suần
+𥌎	suần
+吮	suẫn
+揗	suẫn
+楯	suẫn
+盾	suẫn
+碷	suẫn
+㥧	suận
+侚	suận
+徇	suận
+揗	suận
+殉	suận
+瞤	suận
+迿	suận
+順	suận
+㖅	suât
+㞊	suât
+㲞	suât
+㺷	suât
+䘏	suât
+䢦	suât
+䳳	suât
+僁	suât
+卛	suât
+卹	suât
+埣	suât
+帥	suât
+怵	suât
+恤	suât
+戌	suât
+摔	suât
+欰	suât
+率	suât
+珬	suât
+甩	suât
+碿	suât
+窣	suât
+蜶	suât
+蟀	suât
+裇	suât
+訹	suât
+賉	suât
+銊	suât
+𣘚	suât
+𨄮	suât
+㤜	suật
+䘤	suật
+䢞	suật
+䢤	suật
+咰	suật
+怷	suật
+朮	suật
+术	suật
+沭	suật
+潏	suật
+炢	suật
+秫	suật
+絉	suật
+荗	suật
+術	suật
+袕	suật
+述	suật
+鉥	suật
+錰	suật
+鶐	suật
+𤇍	suật
+𦸇	suật
 㒋	si
 㕧	si
 㚸	si
@@ -28450,31 +28450,31 @@
 魋	thùi
 𠒺	thùi
 𥢢	thùi
-䝎	thun
-䵎	thun
-啍	thun
-噋	thun
-湍	thun
-猯	thun
-芚	thun
-貒	thun
-䠪	thủn
-䵯	thủn
-墥	thủn
-畽	thủn
-疃	thủn
-躖	thủn
-𤱝	thủn
-彖	thún
-湪	thún
-褖	thún
-囤	thùn
-楯	thũn
-盾	thũn
-腯	thũn
-䠈	thut
-涋	thut
-迌	thut
+䝎	thuân
+䵎	thuân
+啍	thuân
+噋	thuân
+湍	thuân
+猯	thuân
+芚	thuân
+貒	thuân
+䠪	thuẩn
+䵯	thuẩn
+墥	thuẩn
+畽	thuẩn
+疃	thuẩn
+躖	thuẩn
+𤱝	thuẩn
+彖	thuấn
+湪	thuấn
+褖	thuấn
+囤	thuần
+楯	thuẫn
+盾	thuẫn
+腯	thuẫn
+䠈	thuât
+涋	thuât
+迌	thuât
 𢚖	thì
 㥂	thich
 㧹	thich
@@ -32153,176 +32153,176 @@
 鱮	chụi
 齟	chụi
 𨣦	chụi
-㡒	chun
-㰉	chun
-䘒	chun
-僎	chun
-啍	chun
-堻	chun
-墫	chun
-宒	chun
-尊	chun
-屯	chun
-嶟	chun
-忳	chun
-搸	chun
-朘	chun
-榛	chun
-樼	chun
-樽	chun
-殝	chun
-津	chun
-溱	chun
-潧	chun
-澵	chun
-獉	chun
-珒	chun
-瑧	chun
-璡	chun
-窀	chun
-繜	chun
-罇	chun
-肫	chun
-臻	chun
-蓁	chun
-衠	chun
-訰	chun
-諄	chun
-蹲	chun
-轃	chun
-迍	chun
-遵	chun
-鐏	chun
-鐫	chun
-鱆	chun
-鱒	chun
-鷷	chun
-㯸	chủn
-䝲	chủn
-侭	chủn
-儘	chủn
-准	chủn
-凖	chủn
-埻	chủn
-準	chủn
-燼	chủn
-盡	chủn
-純	chủn
-綧	chủn
-藎	chủn
-賮	chủn
-贐	chủn
-隼	chủn
-鶽	chủn
-㑓	chún
-㑺	chún
-㕙	chún
-㝦	chún
-㬐	chún
-㬜	chún
-㶼	chún
-㷪	chún
-㷷	chún
-㻪	chún
-㽙	chún
-䐪	chún
-䗯	chún
-䜭	chún
-俊	chún
-儁	chún
-嚍	chún
-寯	chún
-峻	chún
-懏	chún
-捘	chún
-搢	chún
-晉	chún
-晙	chún
-朘	chún
-枃	chún
-榗	chún
-浚	chún
-溍	chún
-濬	chún
-焌	chún
-燇	chún
-瑨	chún
-璡	chún
-畯	chún
-盹	chún
-睃	chún
-稕	chún
-竣	chún
-縉	chún
-臇	chún
-臸	chún
-葰	chún
-訰	chún
-進	chún
-鋑	chún
-鎸	chún
-鐫	chún
-陖	chún
-隽	chún
-雋	chún
-餕	chún
-駿	chún
-鵔	chún
-鵕	chún
-𠗕	chún
-𠬍	chún
-𡍵	chún
-𡼕	chún
-𣽊	chún
-𣿰	chún
-𤀹	chún
-𦻗	chún
-𧪽	chún
-𨌘	chún
-𨫌	chún
-晉	chún
-㶦	chụn
-㶳	chụn
-䀆	chụn
-儘	chụn
-壗	chụn
-嬧	chụn
-濜	chụn
-濬	chụn
-煡	chụn
-燼	chụn
-璶	chụn
-盡	chụn
-藎	chụn
-賮	chụn
-贐	chụn
-㑁	chut
-㰵	chut
-䆯	chut
-䘚	chut
-䯿	chut
-䱣	chut
-倅	chut
-卆	chut
-卒	chut
-崒	chut
-崪	chut
-怵	chut
-憷	chut
-捽	chut
-揤	chut
-枳	chut
-泏	chut
-焌	chut
-窡	chut
-笜	chut
-絀	chut
-訹	chut
-詘	chut
-踤	chut
-黜	chut
-黢	chut
-𠖎	chut
+㡒	chuân
+㰉	chuân
+䘒	chuân
+僎	chuân
+啍	chuân
+堻	chuân
+墫	chuân
+宒	chuân
+尊	chuân
+屯	chuân
+嶟	chuân
+忳	chuân
+搸	chuân
+朘	chuân
+榛	chuân
+樼	chuân
+樽	chuân
+殝	chuân
+津	chuân
+溱	chuân
+潧	chuân
+澵	chuân
+獉	chuân
+珒	chuân
+瑧	chuân
+璡	chuân
+窀	chuân
+繜	chuân
+罇	chuân
+肫	chuân
+臻	chuân
+蓁	chuân
+衠	chuân
+訰	chuân
+諄	chuân
+蹲	chuân
+轃	chuân
+迍	chuân
+遵	chuân
+鐏	chuân
+鐫	chuân
+鱆	chuân
+鱒	chuân
+鷷	chuân
+㯸	chuẩn
+䝲	chuẩn
+侭	chuẩn
+儘	chuẩn
+准	chuẩn
+凖	chuẩn
+埻	chuẩn
+準	chuẩn
+燼	chuẩn
+盡	chuẩn
+純	chuẩn
+綧	chuẩn
+藎	chuẩn
+賮	chuẩn
+贐	chuẩn
+隼	chuẩn
+鶽	chuẩn
+㑓	chuấn
+㑺	chuấn
+㕙	chuấn
+㝦	chuấn
+㬐	chuấn
+㬜	chuấn
+㶼	chuấn
+㷪	chuấn
+㷷	chuấn
+㻪	chuấn
+㽙	chuấn
+䐪	chuấn
+䗯	chuấn
+䜭	chuấn
+俊	chuấn
+儁	chuấn
+嚍	chuấn
+寯	chuấn
+峻	chuấn
+懏	chuấn
+捘	chuấn
+搢	chuấn
+晉	chuấn
+晙	chuấn
+朘	chuấn
+枃	chuấn
+榗	chuấn
+浚	chuấn
+溍	chuấn
+濬	chuấn
+焌	chuấn
+燇	chuấn
+瑨	chuấn
+璡	chuấn
+畯	chuấn
+盹	chuấn
+睃	chuấn
+稕	chuấn
+竣	chuấn
+縉	chuấn
+臇	chuấn
+臸	chuấn
+葰	chuấn
+訰	chuấn
+進	chuấn
+鋑	chuấn
+鎸	chuấn
+鐫	chuấn
+陖	chuấn
+隽	chuấn
+雋	chuấn
+餕	chuấn
+駿	chuấn
+鵔	chuấn
+鵕	chuấn
+𠗕	chuấn
+𠬍	chuấn
+𡍵	chuấn
+𡼕	chuấn
+𣽊	chuấn
+𣿰	chuấn
+𤀹	chuấn
+𦻗	chuấn
+𧪽	chuấn
+𨌘	chuấn
+𨫌	chuấn
+晉	chuấn
+㶦	chuận
+㶳	chuận
+䀆	chuận
+儘	chuận
+壗	chuận
+嬧	chuận
+濜	chuận
+濬	chuận
+煡	chuận
+燼	chuận
+璶	chuận
+盡	chuận
+藎	chuận
+賮	chuận
+贐	chuận
+㑁	chuât
+㰵	chuât
+䆯	chuât
+䘚	chuât
+䯿	chuât
+䱣	chuât
+倅	chuât
+卆	chuât
+卒	chuât
+崒	chuât
+崪	chuât
+怵	chuât
+憷	chuât
+捽	chuât
+揤	chuât
+枳	chuât
+泏	chuât
+焌	chuât
+窡	chuât
+笜	chuât
+絀	chuât
+訹	chuât
+詘	chuât
+踤	chuât
+黜	chuât
+黢	chuât
+𠖎	chuât
 黜	chút
 㗱	chẹp
 㞢	chi
