--- a/shanghaijamo.yaml
+++ b/shanghaijamo.yaml
@@ -445,7 +445,7 @@
 遺	이
 勩	이
 瞖	ᅙᅵ
-伊	ᅙᅵ
+伊	ᅙᅵ/이
 醫	ᅙᅵ
 翳	ᅙᅵ
 矣	ᅙᅵ
@@ -758,7 +758,7 @@
 趨	쳐
 娶	쳐
 趣	쳐
-些	셔
+些	셔/시
 須	셔
 鬚	셔
 需	셔
@@ -1096,8 +1096,8 @@
 但	딴
 蛋	딴
 擔	난
-乃	난
-奈	난
+乃	내
+奈	내
 難	난
 難	난
 藍	란
@@ -1183,15 +1183,15 @@
 銜	안
 閒	안
 限	안
-埃	ᅙᅡᆫ
+埃	ᅙᅢ
 晏	ᅙᅡᆫ
 監	갼
 奸	갼
 姦	갼
 鑑	갼
-艦	갼
-念	냔
-唸	냔
+艦	갼/칸
+念	냔/년
+唸	냔/년
 廿	냔
 罱	냔
 駭	햔
@@ -1423,8 +1423,8 @@
 搧	선
 煽	선
 扇	선
-社	쌔
-射	쌔
+社	쌔/ᄊᆞ
+射	쌔/ᄊᆞ
 才	쌔
 纔	쌔
 材	쌔
@@ -1615,10 +1615,10 @@
 賤	쎤
 羨	쎤
 前	쎤
-全	쎤
-泉	쎤
-旋	쎤
-鏇	쎤
+全	쎤/ᄊᆑᆫ
+泉	쎤/ᄊᆑᆫ
+旋	쎤/ᄊᆑᆫ
+鏇	쎤/ᄊᆑᆫ
 兼	견
 搛	견
 艱	견
@@ -1863,7 +1863,7 @@
 芊	컨
 看	컨
 岸	ᅌᅥᆫ
-蝦	회
+蝦	회/헌/ᄒᆞ
 罕	헌
 漢	헌
 熯	헌
@@ -1983,8 +1983,8 @@
 稻	또
 盜	또
 導	또
-拿	노
-拿	노
+拿	노/내/ᄂᆞ
+拿	노/내/ᄂᆞ
 腦	노
 惱	노
 鬧	노
@@ -2090,7 +2090,7 @@
 攪	꼬
 搞	꼬
 螯	꼬
-瓦	ᅌᅩ
+瓦	ᅌᅩ/ᅌᆞ
 熬	ᅌᅩ
 傲	ᅌᅩ
 鏊	ᅌᅩ
@@ -2101,19 +2101,19 @@
 好	호
 好	호
 孝	호
-廈	오
-下	오
-夏	오
+廈	오/ᄋᆞ
+下	오/ᄋᆞ
+夏	오/ᄋᆞ
 豪	오
 壕	오
 毫	오
 㩝	오
 浩	오
 號	오
-丫	ᅙᅩ
-椏	ᅙᅩ
-鴉	ᅙᅩ
-掗	ᅙᅩ
+丫	ᅙᅩ/ᅙᆞ
+椏	ᅙᅩ/ᅙᆞ
+鴉	ᅙᅩ/ᅙᆞ
+掗	ᅙᅩ/ᅙᆞ
 懊	ᅙᅩ
 拗	ᅙᅩ
 坳	ᅙᅩ
@@ -4112,8 +4112,8 @@
 刻	큭
 克	큭
 剋	큭
-個	끅
-搿	끅
+個	끅/극/윽
+搿	끅/극/윽
 杌	ᅌᅳᆨ
 喝	흑
 郝	흑
@@ -4430,7 +4430,7 @@
 褥	쏙
 漷	곡
 嘓	곡
-國	곡
+國	곡/국
 穀	곡
 谷	곡
 咯	곡
